agregando contenedor al header(html) y espaciado natural

--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="./index.html">
-            <img class="img_logo" src="./multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <!-- Agregando link activo a inicio -->
-                <li class="link_activo">Inicio</li>
-                <li><a href="./pages/recetas.html">Recetas</a></li>
-                <li><a href="./pages/video_recetas.html">Video recetas</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="./index.html">
+                <img class="img_logo" src="./multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <!-- Agregando link activo a inicio -->
+                    <li class="link_activo">Inicio</li>
+                    <li><a href="./pages/recetas.html">Recetas</a></li>
+                    <li><a href="./pages/video_recetas.html">Video recetas</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <!-- Agregando un contenedor para limitar las pantallas grandes -->
