--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -17,18 +17,21 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="../index.html">
-            <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./video_recetas.html">Video recetas</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="../index.html">
+                <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
+                    <li><a href="./video_recetas.html">Video recetas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -64,7 +67,7 @@
                     con
                     una pizca de aceite y lo metemos en el horno sobre las patatas que ya estarán empezando a cocinarse.
                 </p>
-                
+
                 <p>Dejamos que el pescado se ase a la misma temperatura hasta que metiendo una puntilla por debajo de la
                     raspa, veamos que se levanta con facilidad y entonces apagamos el horno y sacamos la fuente. El
                     tiempo
