--- a/pages/pollo_guisado.html
+++ b/pages/pollo_guisado.html
@@ -17,18 +17,21 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="../index.html">
-            <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./video_recetas.html">Video recetas</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="../index.html">
+                <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
+                    <li><a href="./video_recetas.html">Video recetas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -74,7 +77,7 @@
                     Pela
                     las zanahorias y córtalas en medias lunas gorditas. Limpia los champiñones y córtalos en cuartos.
                 </p>
-                
+
                 <p>Pon una sartén al fuego con abundante aceite y cuando coja calor, añade las patatas (ya escurridas y
                     secas) para freír. Deja que se frían (moviéndolas para que no se peguen ni se quemen) durante unos
                     10
