--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -17,18 +17,21 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="../index.html">
-            <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./video_recetas.html">Video recetas</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="../index.html">
+                <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
+                    <li><a href="./video_recetas.html">Video recetas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -66,7 +69,7 @@
                 <p>En primer lugar, para sellar el solomillo salpimienta y dóralo a fuego lento en una sartén con un
                     chorrito de aceite. Cuando esté dorado, retíralo de la sartén y deja que se enfríe completamente.
                 </p>
-                
+
                 <p>Para preparar la duxelle de champiñones, pela y pica la chalota en daditos y ponla a rehogar en la
                     sartén
                     donde has dorado el solomillo con un poco más de aceite. Lava y pica los champiñones y agrégalos.
