--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,18 +15,21 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="../index.html">
-            <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/recetas.html">Recetas</a></li>
-                <li><a href="../pages/video_recetas.html">Video recetas</a></li>
-                <li class="link_activo">Contacto</li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="../index.html">
+                <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/recetas.html">Recetas</a></li>
+                    <li><a href="../pages/video_recetas.html">Video recetas</a></li>
+                    <li class="link_activo">Contacto</li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -45,8 +48,7 @@
                 <h2>Dirección</h2>
                 <iframe class="borde_mapa"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.7001266958177!2d-58.472233099999976!3d-34.6875171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc90e57948b91%3A0x7c8136ba3f138ee5!2sLa%20Receta%20Perfecta!5e0!3m2!1ses!2sar!4v1675730120045!5m2!1ses!2sar"
-                     allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </div>
         <!-- Imagenes de fondo -->
