--- a/pages/video_recetas.html
+++ b/pages/video_recetas.html
@@ -17,29 +17,31 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="../index.html">
-            <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/recetas.html">Recetas</a></li>
-                <li class="link_activo">Video recetas</li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="../index.html">
+                <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/recetas.html">Recetas</a></li>
+                    <li class="link_activo">Video recetas</li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
             <h1>Pollo guisado</h1>
-            <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0"
-                title="YouTube video player" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <br>
             <h1>Solomillo a la wellington</h1>
-            <video  controls>
+            <video controls>
                 <source src="../multimedia/video/solomillo_wellington.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
