--- a/pages/video_recetas.html
+++ b/pages/video_recetas.html
@@ -35,16 +35,18 @@
     </header>
     <main>
         <div class="container">
-            <h1>Pollo guisado</h1>
-            <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <br>
-            <h1>Solomillo a la wellington</h1>
-            <video controls>
-                <source src="../multimedia/video/solomillo_wellington.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <section>
+                <h1>Pollo guisado</h1>
+                <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0" 
+                    allowfullscreen></iframe>
+            </section>
+            <section>
+                <h1>Solomillo a la wellington</h1>
+                <video controls poster="../multimedia/imagenes/solomillo.jpg">
+                    <source src="../multimedia/video/solomillo_wellington.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </section>
         </div>
         <!-- Imagenes de fondo -->
         <div class="background-img"></div>
