--- a/pages/video_recetas.html
+++ b/pages/video_recetas.html
@@ -37,8 +37,8 @@
         <div class="container">
             <section>
                 <h1>Pollo guisado</h1>
-                <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0" 
-                    allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0?controls=0" 
+                allowfullscreen></iframe>
             </section>
             <section>
                 <h1>Solomillo a la wellington</h1>
