--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Agregando icono al title -->
     <link rel="shortcut icon" href="./multimedia/imagenes/logo_recetas.png">
+
     <link rel="stylesheet" href="./css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
     <link rel="stylesheet" href="./css/index.css">
+    <!-- Agregando cdn BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
@@ -38,8 +42,25 @@
         <div class="container">
             <section>
                 <h1>Bienvenidos a "Mis Recetas"</h1>
-                <h2 class="descripcion_pag">Un sitio web donde aprenderás las mejores recetas del universo</h2><br>
-                <img class="img_principal" src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
+                <h2 class="descripcion_pag">Un sitio web donde aprenderás las mejores recetas</h2>
+                <div class="container_imagenes">
+                    <!-- CAROUSEL -->
+                    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="./multimedia/imagenes/croquetas_jamon.jpg"  alt="croquetas de jamón">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./multimedia/imagenes/lubina_patatas.jpg" alt="lubina con papas">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./multimedia/imagenes/solomillo.jpg"  alt="solomillo wellington">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./multimedia/imagenes/pollo_guisado.jpg"  alt="pollo guisado">
+                          </div>
+                        </div>
+                </div>
             </section>
         </div>
         <!-- Imagenes de fondo -->
@@ -59,6 +80,8 @@
             <i class="fa-regular fa-envelope"></i>
         </a>
     </footer>
+      <!-- Script Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
