--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Agregando icono al title -->
     <link rel="shortcut icon" href="./multimedia/imagenes/logo_recetas.png">
-
+<!-- Agregando cdn BootStrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
     <link rel="stylesheet" href="./css/index.css">
-    <!-- Agregando cdn BootStrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                 <div class="container_imagenes">
                     <!-- CAROUSEL -->
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div>
                           <div class="carousel-item active">
                             <img src="./multimedia/imagenes/croquetas_jamon.jpg"  alt="croquetas de jamón">
                           </div>
