--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Agregando icono al title -->
     <link rel="shortcut icon" href="./multimedia/imagenes/logo_recetas.png">
-<!-- Agregando cdn BootStrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- Agregando cdn BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
     <link rel="stylesheet" href="./css/index.css">
-    
+
 </head>
 
 <body>
@@ -37,7 +37,7 @@ integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6
             </nav>
         </div>
     </header>
-    <main>
+    <main class="main" id="main">
         <!-- Agregando un contenedor para limitar las pantallas grandes -->
         <div class="container">
             <section>
@@ -47,20 +47,28 @@ integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6
                     <!-- CAROUSEL -->
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div>
-                          <div class="carousel-item active">
-                            <img src="./multimedia/imagenes/croquetas_jamon.jpg"  alt="croquetas de jamón">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="./multimedia/imagenes/lubina_patatas.jpg" alt="lubina con papas">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="./multimedia/imagenes/solomillo.jpg"  alt="solomillo wellington">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="./multimedia/imagenes/pollo_guisado.jpg"  alt="pollo guisado">
-                          </div>
+                            <div class="carousel-item active">
+                                <a href="./pages/croquetas_jamon.html">
+                                    <img src="./multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="./pages/lubina.html">
+                                    <img src="./multimedia/imagenes/lubina_patatas.jpg" alt="lubina con papas">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="./pages/solomillo.html">
+                                    <img src="./multimedia/imagenes/solomillo.jpg" alt="solomillo wellington">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="./pages/pollo_guisado.html">
+                                    <img src="./multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
+                                </a>
+                            </div>
                         </div>
-                </div>
+                    </div>
             </section>
         </div>
         <!-- Imagenes de fondo -->
@@ -80,8 +88,10 @@ integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6
             <i class="fa-regular fa-envelope"></i>
         </a>
     </footer>
-      <!-- Script Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- Script Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
