--- a/index.html
+++ b/index.html
@@ -9,34 +9,66 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Agregando icono al title -->
     <link rel="shortcut icon" href="./multimedia/imagenes/logo_recetas.png">
+    <!-- Agregando cdn BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
     <link rel="stylesheet" href="./css/index.css">
+
 </head>
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="./index.html">
-            <img class="img_logo" src="./multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <!-- Agregando link activo a inicio -->
-                <li class="link_activo">Inicio</li>
-                <li><a href="./pages/recetas.html">Recetas</a></li>
-                <li><a href="./pages/video_recetas.html">Video recetas</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="./index.html">
+                <img class="img_logo" src="./multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul id="ul">
+                    <!-- Agregando link activo a inicio -->
+                    <li class="link_activo">Inicio</li>
+                    <li><a href="./pages/recetas.html">Recetas</a></li>
+                    <li><a href="./pages/video_recetas.html">Video recetas</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
+    <main class="main" id="main">
         <!-- Agregando un contenedor para limitar las pantallas grandes -->
         <div class="container">
             <section>
                 <h1>Bienvenidos a "Mis Recetas"</h1>
-                <h2 class="descripcion_pag">Un sitio web donde aprenderás las mejores recetas del universo</h2><br>
-                <img class="img_principal" src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
+                <h2 class="descripcion_pag">Un sitio web donde aprenderás las mejores recetas</h2>
+                <div class="container_imagenes">
+                    <!-- CAROUSEL -->
+                    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                        <div>
+                            <div class="carousel-item active">
+                                <a href="./pages/croquetas_jamon.html">
+                                    <img src="./multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="./pages/lubina.html">
+                                    <img src="./multimedia/imagenes/lubina_patatas.jpg" alt="lubina con papas">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="./pages/solomillo.html">
+                                    <img src="./multimedia/imagenes/solomillo.jpg" alt="solomillo wellington">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="./pages/pollo_guisado.html">
+                                    <img src="./multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
             </section>
         </div>
         <!-- Imagenes de fondo -->
@@ -56,6 +88,10 @@
             <i class="fa-regular fa-envelope"></i>
         </a>
     </footer>
+    <!-- Script Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
