--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -17,18 +17,21 @@
 
 <body>
     <header>
-        <!-- Cambiando el logo por un png -->
-        <a href="../index.html">
-            <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./video_recetas.html">Video recetas</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <!-- Agregando contenedor -->
+        <div class="container">
+            <!-- Cambiando el logo por un png -->
+            <a href="../index.html">
+                <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li class="link_activo"><a href="./recetas.html">Recetas</a></li>
+                    <li><a href="./video_recetas.html">Video recetas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -60,43 +63,51 @@
                     <li>20 gr de mantequilla</li>
                     <li>Canela en polvo</li>
                 </ul>
-                <h2>Elaboración de la receta de solomillo wellington paso a paso:</h2><br>
+            </section>
+            <section>
+                <h2>Elaboración de la receta de solomillo Wellington paso a paso:</h2>
                 <p>En primer lugar, para sellar el solomillo salpimienta y dóralo a fuego lento en una sartén con un
                     chorrito de aceite. Cuando esté dorado, retíralo de la sartén y deja que se enfríe completamente.
-                </p><br>
+                </p>
+
                 <p>Para preparar la duxelle de champiñones, pela y pica la chalota en daditos y ponla a rehogar en la
-                    sartén donde has dorado el solomillo con un poco más de aceite. Lava y pica los champiñones y
-                    agrégalos.
+                    sartén
+                    donde has dorado el solomillo con un poco más de aceite. Lava y pica los champiñones y agrégalos.
                     Rehógalos un poco. Vierte el brandy y dale un hervor. Añade también la nata y cocina todo
-                    conjuntamente 5 minutos a fuego suave. Tritura la mezcla con la batidora eléctrica y reserva.</p>
-                <br>
+                    conjuntamente
+                    5 minutos a fuego suave. Tritura la mezcla con la batidora eléctrica y reserva.</p>
                 <p>Coloca las lonchas de jamón en fila sobre un papel de horno, solapando ligeramente una sobre otra.
-                    Úntalas con la mostaza y extiende encima la duxelle de champiñones y chalota.</p><br>
+                    Úntalas con la mostaza y extiende encima la duxelle de champiñones y chalota.</p>
                 <p>Unta el solomillo por todos los lados con el paté. Coloca la pieza de solomillo encima de las lonchas
-                    de jamón untadas con mostaza y champiñones.</p><br>
+                    de
+                    jamón untadas con mostaza y champiñones.</p>
                 <p>Con ayuda del papel de horno envuelve las lonchas de jamón alrededor del solomillo. Introdúcelo en el
-                    frigorífico y mantenlo durante 1 hora para que se asiente y quede bien compacto.</p><br>
+                    frigorífico y mantenlo durante 1 hora para que se asiente y
+                    quede bien compacto.</p>
                 <p>Pasado este tiempo, retira el papel de hornear y envuelve el solomillo con una lámina de hojaldre
-                    dejando la parte de la junta hacia abajo.</p><br>
-                <p>Unta el hojaldre con huevo batido y colócalo sobre una placa de horno forrada con papel de hornear.
-                </p><br>
-                <p>Corta 12 tiras finas de la otra lámina de hojaldre y colócalas encima, de manera que se crucen.
-                    Úntalas con huevo batido.</p><br>
+                    dejando la parte de la junta hacia abajo.</p>
+                <p>Unta el hojaldre con huevo batido y colócalo sobre una
+                    placa de horno forrada con papel de hornear.</p>
+                <p>Corta 12 tiras finas de la otra lámina de hojaldre y
+                    colócalas encima, de manera que se crucen. Úntalas con huevo batido.</p>
                 <p>Hornea el solomillo Wellington a 190ºC (con el horno precalentado) durante 30 minutos, hasta que el
                     hojaldre esté dorado. Cuando esté hecho, sácalo del horno y deja reposar al menos 10 minutos antes
-                    de cortarlo.</p><br>
+                    de
+                    cortarlo.</p>
                 <p>Para la salsa de manzana, pela y trocea las manzanas y ponlas en una cazuela con un
                     chorrito de agua. Agrega la mantequilla y una pizca de canela. Cocina los ingredientes hasta que las
-                    manzanas se deshagan.</p><br>
+                    manzanas se deshagan.</p>
                 <p>Sirve el solomillo Wellington y acompáñalo con un poco de salsa de manzana. Adorna con unas hojas
-                    de perejil.</p><br>
-                <h2>Con qué acompañar el solomillo Wellington:</h2><br>
+                    de perejil.</p>
+            </section>
+            <section>
+                <h2>Con qué acompañar el solomillo Wellington:</h2>
                 <p>Esta receta es un plato principal que se puede servir con una guarnición de patatas al horno o
-                    verduras al vapor. También te recomendamos preparar una salsa para solomillo Wellington, que le dará
-                    un toque fresco y personal.</p>
+                    verduras
+                    al vapor. También te recomendamos preparar una salsa para solomillo Wellington, que le dará un toque
+                    fresco y personal.</p>
             </section>
         </div>
-       
         <!-- Imagenes de fondo -->
         <div class="background-img"></div>
     </main>
