corrección responsive videos y detalles en recetas generales

--- a/pages/croquetas_jamon.html
+++ b/pages/croquetas_jamon.html
@@ -39,7 +39,7 @@
             <section>
                 <h2>Croquetas de jamón</h2>
                 <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="Croquetas de jamón">
-                <p>Tiempo de preparación: <strong>25 minutos</strong> | Tiempo total: <strong> 50 minutos</strong></p>
+                <p><strong> Tiempo de preparación:</strong> 25 minutos | <strong> Tiempo total:</strong> 50 minutos</p>
                 <h2>Ingredientes (6 personas):</h2>
                 <ul>
                     <li>200 g de jamón serrano</li>
