--- a/pages/pollo_guisado.html
+++ b/pages/pollo_guisado.html
@@ -39,7 +39,7 @@
             <section>
                 <h2>Pollo guisado</h2>
                 <img src="../multimedia/imagenes/pollo_guisado.jpg" alt="Pollo guisado">
-                <p><b>Tiempo de preparación:</b> 20 minutos <b>| Tiempo total:</b> 75 minutos</p>
+                <p><strong>Tiempo de preparación:</strong> 20 minutos <strong>| Tiempo total:</strong> 75 minutos</p>
                 <h2>Ingredientes (para 4 personas):</h2>
                 <ul>
                     <li>8 jamoncitos de pollo</li>
