--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -39,7 +39,7 @@
             <section>
                 <h2>Solomillo Wellington</h2>
                 <img src="../multimedia/imagenes/solomillo.jpg" alt="solomillo Wellington">
-                <p><b>Tiempo de preparación:</b> 1 hora <b>| Tiempo total:</b> 1 hora 30 minutos</p>
+                <p><strong>Tiempo de preparación:</strong> 1 hora <strong>| Tiempo total:</strong> 1 hora 30 minutos</p>
                 <h2>Ingredientes para hacer solomillo Wellington (6 personas):</h2>
                 <ul>
                     <li>800 g de solomillo de ternera</li>
