--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -40,8 +40,8 @@
 
                 <h2>Lubina con patatas</h2>
                 <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="Lubina con patatas">
-                <p><b>Tiempo de preparación:</b> 10 minutos <b>| Tiempo de cocción:</b> 30 minutos <b>| Tiempo
-                        total:</b> 40
+                <p><strong>Tiempo de preparación:</strong> 10 minutos <strong>| Tiempo de cocción:</strong> 30 minutos <strong>| Tiempo
+                        total:</strong> 40
                     minutos</p>
                 <h2>Ingredientes:</h2>
                 <ul>
