corrigiendo las macanas de bootstrap en el header

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <!-- Agregando contenedor -->
-        <div class="container">
+        <div id="container">
             <!-- Cambiando el logo por un png -->
             <a href="./index.html">
                 <img class="img_logo" src="./multimedia/imagenes/logo_recetas.png" alt="logo pagina">
