--- a/index.html
+++ b/index.html
@@ -47,28 +47,35 @@
                     <!-- CAROUSEL -->
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div>
+
                             <div class="carousel-item active">
                                 <a href="./pages/croquetas_jamon.html">
                                     <img src="./multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+                                    <h2>Croquetas de jamón</h2>
                                 </a>
                             </div>
+
                             <div class="carousel-item">
                                 <a href="./pages/lubina.html">
                                     <img src="./multimedia/imagenes/lubina_patatas.jpg" alt="lubina con papas">
+                                    <h2>Lubina con papas</h2>
                                 </a>
                             </div>
                             <div class="carousel-item">
                                 <a href="./pages/solomillo.html">
                                     <img src="./multimedia/imagenes/solomillo.jpg" alt="solomillo wellington">
+                                    <h2>Solomillo wellington</h2>
                                 </a>
                             </div>
                             <div class="carousel-item">
                                 <a href="./pages/pollo_guisado.html">
                                     <img src="./multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
+                                    <h2>Pollo guisado</h2>
                                 </a>
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
         </div>
         <!-- Imagenes de fondo -->
