agregando efecto slide up  a las cards

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -38,24 +38,28 @@
                 <h2>Solomillo Wellington</h2>
                 <a href="../pages/solomillo.html">
                     <img src="../multimedia/imagenes/solomillo.jpg" alt="Solomillo Wellington">
+                    <p>Esta receta es un plato principal que se puede servir con una guarnición de patatas al horno...</p>
                 </a>
             </article>
             <article>
                 <h2>Lubina con patatas</h2>
                 <a href="../pages/lubina.html">
                     <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="lubina con patatas">
+                    <p>Acompañada con unas deliciosas patatas panadera, es una opción perfecta para dejar encantados a todos.</p>
                 </a>
             </article>
             <article>
                 <h2>Pollo guisado</h2>
                 <a href="../pages/pollo_guisado.html">
                     <img src="../multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
+                    <p>El pollo guisado con verduras es una receta típica de abuela. Además, como casi todos los guisos, es muy económico de hacer.</p>
                 </a>
             </article>
             <article>
                 <h2>Croquetas de jamón</h2>
                 <a href="../pages/croquetas_jamon.html">
                     <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+                    <p>El mejor consejo para hacer unas croquetas de campeonato es “tener paciencia y una muñeca potente para remover”.</p>
                 </a>
             </article>
         </div>
